添加扫描图片跳转

--- a/3dbox.html
+++ b/3dbox.html
@@ -122,13 +122,13 @@
     <div id="bc1"><img src-data="images/box/front1_min.png" alt="前" class="tem" onclick="box_click()"/></div>
     <div id="bc2"><img src-data="images/box/back1_min.png" alt="后" class="tem" onclick="box_click()"/></div>
     <div id="bc3"><img src-data="images/box/over1_min.png" alt="上" class="tem" onclick="box_click()"/></div>
-    <div id="bc4" class="tem"></div>
+    <div id="bc4" class="tem"><p>Нажмите, чтобы просмотреть подробную информацию об упаковке.</p></div>
     <div id="bc5"><img src-data="images/box/right1_min.png" alt="右" class="tem" onclick="box_click()"/></div>
     <div id="bc6"><img src-data="images/box/left1_min.png" alt="左" class="tem" onclick="box_click()"/></div>
     <div id="bc7"><img src-data="images/box/front1_min.png" alt="" class="tem" onclick="box_click()"/></div>
     <div id="bc8"><img src-data="images/box/back1_min.png" alt="" class="tem" onclick="box_click()"/></div>
     <div id="bc9"><img src-data="images/box/over1_min.png" alt="" class="tem" onclick="box_click()"/></div>
-    <div id="bc10" class="tem"></div>
+    <div id="bc10" class="tem"><p>Нажмите, чтобы просмотреть подробную информацию об упаковке.</p></div>
     <div id="bc11"><img src-data="images/box/right1_min.png" alt="" class="tem" onclick="box_click()"/></div>
     <div id="bc12"><img src-data="images/box/left1_min.png" alt="" class="tem" onclick="box_click()"/></div>
 </section>
