修改3dbox页面提示

--- a/3dbox.html
+++ b/3dbox.html
@@ -132,6 +132,11 @@
     <div id="bc11"><img src-data="images/box/right1_min.png" alt="" class="tem" onclick="box_click()"/></div>
     <div id="bc12"><img src-data="images/box/left1_min.png" alt="" class="tem" onclick="box_click()"/></div>
 </section>
+
+<p id="prompt">
+    Нажмите, чтобы просмотреть подробную информацию об упаковке.
+</p>
+
 <!-- 点击事件 -->
 <script>
     let timer = null
