修改3dbox页面提示

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <!-- 强制浏览器每次请求资源时，从服务器下载最新资源。强制清除缓存，防止参数出错 -->
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <!-- ############################################################### -->
     <!-- css -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/index.css">
