修改3dbox页面提示

--- a/video.html
+++ b/video.html
@@ -5,6 +5,11 @@
     <title>video</title>
     <link rel="stylesheet" href="./css/video.css">
     <script src="script/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    />
 </head>
 <body>
 <!-- 返回按钮 -->
@@ -46,33 +51,61 @@
 
     // 添加播放暂停按钮点击事件
     videoPlayer.addEventListener("click", togglePlay);
+
+    function itemClick() {
+        let itemId = $(window.event.currentTarget)[0].id;
+        let video_src = ""
+        if (itemId === "cont1") {
+            video_src = "https://youtu.be/zIazgxjMC4w?si=lbMHa76WbeSdjNbU";
+        } else if (itemId === "cont2") {
+            video_src = "";
+        } else if (itemId === "cont3") {
+            video_src = "https://youtu.be/2KftxtYLBok?si=Lf6BqusBRVwgQ4Sq";
+        } else if (itemId === "cont4") {
+            video_src = "";
+        } else if (itemId === "cont5") {
+            video_src = "";
+        } else if (itemId === "cont6") {
+            video_src = "";
+        }
+
+        if (video_src !== "") {
+            Fancybox.show([
+                {
+                    src: video_src,
+                    width: 640,
+                    height: 360,
+                },
+            ]);
+        }
+    }
 </script>
 
 <div class="content py-3">
     <div class="userCont mb-3">
-        <div class="item" id="cont1">
+        <div class="item" id="cont1" onclick="itemClick()">
             <img src="./images/animal/cont1.webp" alt="">
             <div>龙</div>
         </div>
-        <div class="item" id="cont2">
+        <div class="item" id="cont2" onclick="itemClick()">
             <img src="./images/animal/cont2.webp" alt="">
             <div>玄武</div>
         </div>
-        <div class="item" id="cont3">
+        <div class="item" id="cont3" onclick="itemClick()">
             <img src="./images/animal/cont3.webp" alt="">
             <div>凤凰</div>
         </div>
     </div>
-    <div class="userCont mb-3" id="cont4">
+    <div class="userCont mb-3" id="cont4" onclick="itemClick()">
         <div class="item">
             <img src="./images/animal/cont4.webp" alt="">
             <div>麒麟</div>
         </div>
-        <div class="item" id="cont5">
+        <div class="item" id="cont5" onclick="itemClick()">
             <img src="./images/animal/cont5.webp" alt="">
             <div>鲲</div>
         </div>
-        <div class="item" id="cont6">
+        <div class="item" id="cont6" onclick="itemClick()">
             <img src="./images/animal/cont6.webp" alt="">
             <div>仙鹤</div>
         </div>
