--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: scale; to: 1.5 1.5 2; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -171,6 +172,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: rotation; to: -90 360 0; loop: true; dur: 10000"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -184,6 +186,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: position; to: 0 1 0; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -197,6 +200,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: scale; to: 1.5 1.5 2; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -210,6 +214,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: rotation; to: -90 360 0; loop: true; dur: 10000"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -223,6 +228,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: scale; to: 1.5 1.5 2; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -236,6 +242,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: position; to: 0 1 0; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -249,6 +256,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: rotation; to: -90 360 0; loop: true; dur: 10000"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -262,6 +270,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: scale; to: 1.5 1.5 2; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -275,6 +284,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: rotation; to: -90 360 0; loop: true; dur: 10000"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -288,6 +298,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: position; to: 0 1 0; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -301,6 +312,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: scale; to: 1.5 1.5 2; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -314,6 +326,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: rotation; to: -90 360 0; loop: true; dur: 10000"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -327,6 +340,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: scale; to: 1.5 1.5 2; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -340,6 +354,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: position; to: 0 1 0; dur: 2000; easing: linear; loop: true"
                 class="clickable"
                 cursor-listener
                 markerhandler
@@ -353,6 +368,7 @@
                 height="1.5"
                 width="1.5"
                 rotation="-90 0 0"
+                animation="property: rotation; to: -90 360 0; loop: true; dur: 10000"
                 class="clickable"
                 cursor-listener
                 markerhandler
