--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/index.css">
     <!-- script -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js?time=new Date()"></script>
-    <script src="script/aframe.min.js?time=new Date()"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js?time=new Date()"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="script/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="script/jquery.js"></script>
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
