--- a/details.html
+++ b/details.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <!-- Swiper JS -->
     <script src="script/swiper-bundle.min.js"></script>
+    <script src="script/back.js"></script>
     <script>
         $(function () {
             // #####定义获取url参数的方法#####
@@ -72,6 +73,11 @@
                     nextEl: ".swiper-button-next",
                     prevEl: ".swiper-button-prev",
                 },
+            });
+
+            window.AndroidBack.listen(() => {
+                console.log('back');
+                detailsBackClick();
             });
         })
     </script>
