--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="script/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="script/jquery.js"></script>
+    <script src="script/back.js"></script>
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
     <script src="./script/gesture-handler.js"></script>
