--- a/long.html
+++ b/long.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/long.css">
     <!-- script -->
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.js"></script>
+    <script src="script/back.js"></script>
     <script>
         $(function () {
             // #####定义获取url参数的方法#####
@@ -43,6 +44,10 @@
                 }
             });
 
+            window.AndroidBack.listen(() => {
+                console.log('back');
+                backClick();
+            });
         })
 
         // 图片加载函数
