--- a/video.html
+++ b/video.html
@@ -93,29 +93,29 @@
 
 <div class="content py-3">
     <div class="userCont mb-3">
-        <div class="item" id="cont1" onclick="itemClick()">
+        <div class="item" id="cont1">
             <img src="./images/animal/cont1.webp" alt="">
             <div>龙</div>
         </div>
-        <div class="item" id="cont2" onclick="itemClick()">
+        <div class="item" id="cont2">
             <img src="./images/animal/cont2.webp" alt="">
             <div>玄武</div>
         </div>
-        <div class="item" id="cont3" onclick="itemClick()">
+        <div class="item" id="cont3">
             <img src="./images/animal/cont3.webp" alt="">
             <div>凤凰</div>
         </div>
     </div>
-    <div class="userCont mb-3" id="cont4" onclick="itemClick()">
+    <div class="userCont mb-3" id="cont4">
         <div class="item">
             <img src="./images/animal/cont4.webp" alt="">
             <div>麒麟</div>
         </div>
-        <div class="item" id="cont5" onclick="itemClick()">
+        <div class="item" id="cont5">
             <img src="./images/animal/cont5.webp" alt="">
             <div>鲲</div>
         </div>
-        <div class="item" id="cont6" onclick="itemClick()">
+        <div class="item" id="cont6">
             <img src="./images/animal/cont6.webp" alt="">
             <div>仙鹤</div>
         </div>
@@ -127,23 +127,7 @@
             <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
-            <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
-        </div>
-    </div>
-    <div class="textBox">
-        <div class="user">
-            <img src="./images/logo1.png" alt="">
-        </div>
-        <div class="text ">
-            <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
-        </div>
-    </div>
-    <div class="textBox">
-        <div class="user">
-            <img src="./images/logo1.png" alt="">
-        </div>
-        <div class="text ">
-            <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
+            <img src="./images/ad/1.jpg">
         </div>
     </div>
     <div class="textBox">
