--- a/video.html
+++ b/video.html
@@ -95,33 +95,39 @@
     <div class="userCont mb-3">
         <div class="item" id="cont1">
             <img src="./images/animal/cont1.webp" alt="">
-            <div>龙</div>
+            <!-- 龙 -->
+            <div>Дракон</div>
         </div>
         <div class="item" id="cont2">
             <img src="./images/animal/cont2.webp" alt="">
-            <div>玄武</div>
+            <!-- 玄武 -->
+            <div>Сюаньу</div>
         </div>
         <div class="item" id="cont3">
             <img src="./images/animal/cont3.webp" alt="">
-            <div>凤凰</div>
+            <!-- 凤凰 -->
+            <div>Феникс</div>
         </div>
     </div>
     <div class="userCont mb-3" id="cont4">
         <div class="item">
             <img src="./images/animal/cont4.webp" alt="">
-            <div>麒麟</div>
+            <!-- 麒麟 -->
+            <div>Кирин</div>
         </div>
         <div class="item" id="cont5">
             <img src="./images/animal/cont5.webp" alt="">
-            <div>鲲</div>
+            <!-- 鲲 -->
+            <div>Кун</div>
         </div>
         <div class="item" id="cont6">
             <img src="./images/animal/cont6.webp" alt="">
-            <div>仙鹤</div>
+            <!-- 仙鹤 -->
+            <div>Кран</div>
         </div>
     </div>
-
-    <h3 class="tit mb-3">更多推广</h3>
+    <!-- 更多推广 -->
+    <h3 class="tit mb-3">Больше продвижения</h3>
     <div class="textBox">
         <div class="user">
             <img src="./images/logo1.png" alt="">
