修改video页面广告

--- a/video.html
+++ b/video.html
@@ -141,7 +141,7 @@
             <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
-            <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
+            <img src="./images/ad/2.jpg">
         </div>
     </div>
     <div class="textBox">
@@ -149,7 +149,7 @@
             <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
-            <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
+            <img src="./images/ad/3.jpg">
         </div>
     </div>
 </div>
